--- a/empty-example/index.html
+++ b/empty-example/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,8 +8,9 @@
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	  <p>hello world</p>
+	  <h1>hello world</h1>
   </body>
 </html>
