added js file, created drawing script (black only)

--- a/empty-example/index.html
+++ b/empty-example/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	  <h1>hello world</h1>
+	  <h1>Drawing is Fun :)</h1>
+	  <script src="script.js"></script>
   </body>
 </html>
